# dondeplanto.ai

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
data/: mock_locations.json  species_profiles.yaml
data/inta/: README_inta_data.md  corrientes_suelos.gpkg  entre_rios_suelos.gpkg  misiones_suelos.gpkg
docs/: architecture.md  data_sources.md  demo_script.md  inta_integration.md  limitations.md  scoring_methodology.md
src/dondeplanto/: __init__.py  config.py
src/dondeplanto/api/: __init__.py  app.py
src/dondeplanto/clients/: __init__.py  firms_client.py  inta_local_client.py  inta_wfs_client.py  open_meteo_climate_client.py  open_meteo_observed_client.py  overpass_client.py
src/dondeplanto/explanation/: __init__.py  explainer.py  report_generator.py
src/dondeplanto/features/: __init__.py  climate_features.py  feature_builder.py  fire_features.py  soil_features.py
src/dondeplanto/mock/: __init__.py  generate_inta_mock.py
src/dondeplanto/scoring/: __init__.py  membership.py  recommendation.py  site_scoring.py  species_matching.py  species_profiles.py
tests/: test_api.py  test_climate_features.py  test_explainer.py  test_feature_builder.py  test_fire_features.py  test_firms_client.py  test_inta_local_client.py  test_membership.py  test_open_meteo_climate_client.py  test_open_meteo_observed_client.py  test_overpass_client.py  test_recommendation.py  test_report_generator.py  test_site_scoring.py  test_smoke.py  test_soil_features.py  test_species_matching.py  test_species_profiles.py
