[project]
name = "dondeplanto"
version = "0.1.0"
description = "IA para decidir dónde plantar hoy pensando en el clima de mañana"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Liliana Di Lanzo", email = "lilidl-nft@users.noreply.github.com" },
]
requires-python = ">=3.12,<3.13"
keywords = ["forestry", "climate-change", "inta", "argentina", "land-suitability"]

dependencies = [
    "streamlit>=1.39.0",
    "pydeck>=0.9.1",
    "geopandas>=1.0.0",
    "shapely>=2.0.6",
    "requests>=2.32.3",
    "pyyaml>=6.0.2",
    "pandas>=2.2.3",
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.1",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "pyproj>=3.7.0",
    "httpx>=0.27.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.4",
    "mypy>=1.13.0",
    "types-requests>=2.32.3.20240914",
    "types-PyYAML>=6.0.12.20240920",
    "pre-commit>=4.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dondeplanto"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src/dondeplanto",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["src/dondeplanto", "app.py"]
omit = [
    "src/dondeplanto/mock/*",
    "src/dondeplanto/__main__.py",
    # F2: stub WFS sin integración real activa; el contrato (None ante error)
    # se valida en el resto de los tests. F+ activará la cobertura real.
    "src/dondeplanto/clients/inta_wfs_client.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true
precision = 1

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".venv", "data", "dist", "build"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default argument (FastAPI pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]
exclude = ["tests/", ".venv/"]

[[tool.mypy.overrides]]
module = ["geopandas.*", "shapely.*"]
ignore_missing_imports = true
